Regression(270725@main) Many Web extensions API tests are crashing https://webkit.org/b/264885 rdar://problem/118464397

Reviewed by Chris Dumez.

Remove the None and All values from Web Extension OptionSet enums, and use new OptionSet::all()
instead to get a valid OptionSet for the given enum.

Add back the EnumTraits for the OptionSets, since GeneratedSerializers does not generate them,
and they are needed by OptionSet to check valid values.

* Source/WTF/wtf/OptionSet.h:
(WTF::OptionSet::all): Added.
* Source/WebKit/Shared/Extensions/WebExtensionWindow.serialization.in:
* Source/WebKit/UIProcess/API/Cocoa/_WKWebExtensionContext.mm:
(toImpl):
* Source/WebKit/UIProcess/Extensions/WebExtensionTab.h:
* Source/WebKit/UIProcess/Extensions/WebExtensionWindow.h:
* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPIWindowsCocoa.mm:
(WebKit::WebExtensionAPIWindows::parseWindowTypesFilter):
(WebKit::toWindowTypeFilter):
(WebKit::WebExtensionContextProxy::dispatchWindowsEvent):
* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPIWindowsEventCocoa.mm:
(WebKit::WebExtensionAPIWindowsEvent::invokeListenersWithArgument):
* Source/WebKit/WebProcess/Extensions/API/WebExtensionAPIWindowsEvent.h:

Canonical link: https://commits.webkit.org/270782@main